--- a/Final_project/.R/Final_Proj.Rmd
+++ b/Final_project/.R/Final_Proj.Rmd
@@ -14,7 +14,6 @@ library(readr)
 library(ggdist)
 library(svglite)
 library(correlation)
-library(splitstackshape)
 library(patchwork)
 ```
 
@@ -122,14 +121,14 @@ w_plot
 
 > Overall, the trend of marriage rate for women also matches up with the men, although the rate is not as high. The increasing pattern is similar that of the men with the noticeable increase in the trend starting in the 1990s.
 
-## Comapring graphs of marriage trend for men and women who only have a high school diploma or less.
+## Comparing graphs of marriage trend for men and women who only have a high school diploma or less.
 
 ```{r}
 combined_w_m_plot <- m_plot + w_plot
 combined_w_m_plot
 ```
 
-> Here is a better look into the comparison of the trends between two genders.
+> The comparative visual above is a better look into the comparison of the trends between two genders.
 
 ```{r}
 ggsave(here::here("Final_project", "output", "figure",
@@ -150,39 +149,6 @@ ggsave(here::here("Final_project", "output", "figure",
 ```
 
 
-> Now, we will look at the dataset for both gender and observe their marriage trend for individuals with only a high school diploma or less. To check our two previous datasets and see if the provided combined dataset of both gender matches with our previous one.
-
-```{r}
-bg <- both_gender %>%
-  select(year, starts_with("HS_")) 
-
-bg_long <- bg %>% pivot_longer(
-  cols = -year,
-  names_sep = "_",
-  names_to = c("edu", "age"),
-  values_to = "rate"
-)
-
-
-bg_plot <- bg_long %>% 
-  ggplot(aes(x=year,y=rate, color = age)) +
-  geom_point() +
-  geom_smooth(method = "lm", se = FALSE) +
-  labs(title = "Marriage Trend Amongst Different Age Group Over Time for Men and Women.")
-
-bg_plot
-```
-
-```{r}
-main_compared_data <- m_plot + w_plot + bg_plot
-main_compared_data
-
-ggsave(here::here("Final_project", "output", "figure",
-                  "Comparison of Marriage Trend for Men and Women versus Combined.svg"),
-       main_compared_data,
-       height = 6,
-       width = 6)
-```
 
 ## Data summary of both gender for individuals with a high school diploma or less.
 
@@ -214,7 +180,44 @@ both_gend_tab <- full_join(sum_for_both_gend, Sum_both_gend_corr)
 both_gend_tab
 ```
 
-Hm, this looks really wrong. I am not supposed to get a correlation of anything higher than .8 realistically speaking. But, the correlation I provided is my attempt at trying to figure out whether age has any correlation with marriage rate for both genders for individuals who have a high school diploma or less. The data (which is extremely flawed and I need to find a way to update, fix this) indicated there is a strong correlation between age and marriage rate for individuals with a high school diploma or less throughout the years.
+> Hm, this looks really wrong. I am not supposed to get a correlation of anything higher than .8 realistically speaking. But, the correlation I provided is my attempt at trying to figure out whether age has any correlation with marriage rate for both genders for individuals who have a high school diploma or less. The data (which is extremely flawed and I need to find a way to update, fix this) indicated there is a strong correlation between age and marriage rate for individuals with a high school diploma or less throughout the years.
+> Now, we will look at the dataset for both gender and observe their marriage trend for individuals with only a high school diploma or less. To check our two previous datasets and see if the provided combined dataset of both gender matches with our previous one.
+
+```{r}
+bg <- both_gender %>%
+  select(year, starts_with("HS_")) 
+
+bg_long <- bg %>% pivot_longer(
+  cols = -year,
+  names_sep = "_",
+  names_to = c("edu", "age"),
+  values_to = "rate"
+)
+
+
+bg_plot <- bg_long %>% 
+  ggplot(aes(x=year,y=rate, color = age)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  labs(title = "Marriage Trend Amongst Different Age Group Over Time for Men and Women.")
+
+bg_plot
+```
+
+> This dataset seems very similar to the two individually produced gendered dataset mentioned above.
+
+```{r}
+main_compared_data <- m_plot + w_plot + bg_plot
+main_compared_data
+
+ggsave(here::here("Final_project", "output", "figure",
+                  "Comparison of Marriage Trend for Men and Women versus Combined.svg"),
+       main_compared_data,
+       height = 6,
+       width = 6)
+```
+
+> At this rate, it can be safely assumed that the dataset with both gender approximately matches with the two individual gender dataset. WE will use the dataset with both genders in the future due to its conveinency for future comparison with divorce rate, etc.
 
 ```{r}
 tibble_both_gender <- as.tibble(both_gender)
@@ -223,7 +226,8 @@ write.csv(tibble_both_gender,
           here::here("Final_project", "data", "tibble_both_gender.csv"))
 ```
 
-Bachelor Degree or higher:
+### Marriage Rate and Trend of Individuals with a Bachelor Degree or higher.
+
 ```{r}
 tibble_both_gender_output1 <- tibble_both_gender %>%
   select(year, date, BAp_2534) %>% 
@@ -234,9 +238,31 @@ write.csv(tibble_both_gender_output1,
           here::here("Final_project", "output", "Max_change_in_years_for_higher_education.csv"))
 ```
 
-As we can see here, the maximum marriage population for people with higher level of education seems to increase over time. This of course is just one variable.
+> As we can see here, the maximum marriage population for people with higher level of education seems to increase over time. This of course is just one variable.
 
-Now, let's look at divorce rate among the population throughout the year by education.
+```{r}
+bg_Bach_high <- both_gender %>%
+  select(year, starts_with(c("BAo_", "BAp_"))) 
+
+bg_Bach_high_long <- bg_Bach_high %>% pivot_longer(
+  cols = -year,
+  names_sep = "_",
+  names_to = c("edu", "age"),
+  values_to = "rate"
+)
+
+
+bg_Bach_high_plot <- bg_Bach_high_long %>% 
+  ggplot(aes(x=year,y=rate, color = age)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  labs(title = "Marriage Trend Amongst Different Age Group Over Time for Men and Women with Bachelor or Higher.")
+
+bg_Bach_high_plot
+```
+
+### Divorce Rate Calculation.
+> Now, let's look at divorce rate among the population throughout the year by education.
 
 ```{r}
 Divorce_sum <- Major_data %>% 
@@ -251,6 +277,27 @@ write.csv(Divorce_sum,
 ```
 
 ```{r}
+div <- Major_data %>%
+  select(year, starts_with("HS_")) 
+
+div_long <- div %>% pivot_longer(
+  cols = -year,
+  names_sep = "_",
+  names_to = c("edu", "age"),
+  values_to = "rate"
+)
+
+
+div_plot <- div_long %>% 
+  ggplot(aes(x=year,y=rate, color = age)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  labs(title = "Divorce Trend Among Individuals with only a High School Diploma.")
+
+div_plot
+```
+
+```{r}
 Divorce_trend_output <- Major_data %>%
   select(year, date, BAp_3544) %>% 
   group_by(year) %>%
@@ -260,11 +307,11 @@ write.csv(Divorce_trend_output,
           here::here("Final_project", "output", "Divorce_trend_output.csv"))
 ```
 
-As indicated within the data for population that are 35 to 44 years of age, and has a college degree or higher, the trend for divorce rate seems to be increasing by the years when looking at their highest divorce rate for the years (slightly decreasing starting to see significant decreasing in the early 2000s).
+> As indicated within the data for population that are 35 to 44 years of age, and has a college degree or higher, the trend for divorce rate seems to be increasing by the years when looking at their highest divorce rate for the years (slightly decreasing starting to see significant decreasing in the early 2000s).
 
-Now, let's look at some graphs for the marriage rate versus divorce rate.
+> Now, let's look at some graphs for the marriage rate versus divorce rate.
 
-I first had to extract out the exact data I want to look at from the divorce dataset and compare it with the marriage one.
+> I first had to extract out the exact data I want to look at from the divorce dataset and compare it with the marriage one.
 
 ```{r}
 Divorce_BAp_3544_Data1 <- Major_data %>% 
@@ -280,7 +327,7 @@ Marriage_BAp_3544_Data1 <- both_gender %>%
 Marriage_BAp_3544_Data1
 ```
 
-I then combined both of them together to make the graph.
+> I then combined both of them together to make the graph.
 
 
 ```{r}
